force-app/main/default/objects/Opportunity/fields/Actual_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Move_In_Date__c</fullName>
    <inlineHelpText>Actual admission date</inlineHelpText>
    <label>Actual Move In Date</label>
    <type>Date</type>
</CustomField>