force-app/main/default/objects/Opportunity/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <inlineHelpText>Type of admission</inlineHelpText>
    <label>Admission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Respite</fullName>
            </value>
            <value>
                <fullName>Repeat Respite</fullName>
            </value>
            <value>
                <fullName>Conversion from Respite</fullName>
            </value>
            <value>
                <fullName>Direct Permanent Admission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>