force-app/main/default/objects/Opportunity/fields/Allocated_Room__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Room that has been allocated</description>
    <label>Allocated Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Opportunities (Allocated)</relationshipLabel>
    <relationshipName>Opportunities_Allocated</relationshipName>
    <type>Lookup</type>
</CustomField>