force-app/main/default/objects/Opportunity/fields/Assessment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completed_Date__c</fullName>
    <inlineHelpText>Date and time when assessment was completed</inlineHelpText>
    <label>Assessment Completed Date</label>
    <type>DateTime</type>
</CustomField>