force-app/main/default/objects/Opportunity/fields/Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome__c</fullName>
    <inlineHelpText>Outcome of the care assessment</inlineHelpText>
    <label>Assessment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved - Suitable</fullName>
            </value>
            <value>
                <fullName>Approved - Additional Support Needed</fullName>
            </value>
            <value>
                <fullName>Referred for Further Assessment</fullName>
            </value>
            <value>
                <fullName>Not Suitable</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>