force-app/main/default/objects/Opportunity/fields/Assessment_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Scheduled_Date__c</fullName>
    <inlineHelpText>Date and time of scheduled assessment</inlineHelpText>
    <label>Assessment Scheduled Date</label>
    <type>DateTime</type>
</CustomField>