force-app/main/default/objects/Opportunity/fields/Care_Home__c.field-meta.xml
<CustomField>
    <fullName>Care_Home__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TRUE</description>
    <inlineHelpText>Which care home location</inlineHelpText>
    <label>Care Home</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>