force-app/main/default/objects/Opportunity/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <inlineHelpText>Type of care being arranged</inlineHelpText>
    <label>Care Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respite Care</fullName>
            </value>
            <value>
                <fullName>Permanent Residential</fullName>
            </value>
            <value>
                <fullName>Nursing Care</fullName>
            </value>
            <value>
                <fullName>Dementia Care</fullName>
            </value>
            <value>
                <fullName>End of Life Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>