force-app/main/default/objects/Opportunity/fields/Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date__c</fullName>
    <inlineHelpText>Date when contract was sent for signature</inlineHelpText>
    <label>Contract Sent Date</label>
    <type>Date</type>
</CustomField>