force-app/main/default/objects/Opportunity/fields/Direct_Debit_Setup__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has direct debit been setup</description>
    <label>Direct Debit Setup</label>
    <type>Checkbox</type>
</CustomField>