force-app/main/default/objects/Opportunity/fields/Enquiry_Level__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Level__c</fullName>
    <label>Enquiry Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1: Expected admission within one to two weeks.</fullName>
            </value>
            <value>
                <fullName>Level 2: Expected admission within the next six weeks.</fullName>
            </value>
            <value>
                <fullName>Level 3: Likely to be admitted at a later, undefined date.</fullName>
            </value>
            <value>
                <fullName>Level 4: No Expected date set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>