force-app/main/default/objects/Opportunity/fields/Expected_Duration_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration_Weeks__c</fullName>
    <description>For respite stays - expected number of weeks</description>
    <label>Expected Duration (Weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>