force-app/main/default/objects/Opportunity/fields/Expected_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Move_In_Date__c</fullName>
    <inlineHelpText>Expected admission date</inlineHelpText>
    <label>Expected Move In Date</label>
    <type>Date</type>
</CustomField>