force-app/main/default/objects/Opportunity/fields/Financial_Assessment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assessment_Completed_Date__c</fullName>
    <inlineHelpText>Date when financial assessment was completed</inlineHelpText>
    <label>Financial Assessment Completed Date</label>
    <type>Date</type>
</CustomField>