force-app/main/default/objects/Opportunity/fields/Financial_Assessment_Required__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assessment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a financial assessment required</description>
    <label>Financial Assessment Required</label>
    <type>Checkbox</type>
</CustomField>