force-app/main/default/objects/Opportunity/fields/Financial_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assessment_Status__c</fullName>
    <inlineHelpText>Status of financial assessment</inlineHelpText>
    <label>Financial Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed - Approved</fullName>
            </value>
            <value>
                <fullName>Completed - Declined</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>