force-app/main/default/objects/Opportunity/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <inlineHelpText>How the care will be funded</inlineHelpText>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private - Self Funded</fullName>
            </value>
            <value>
                <fullName>Private - Family Funded</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>NHS Continuing Healthcare</fullName>
            </value>
            <value>
                <fullName>Mixed Private/LA</fullName>
            </value>
            <value>
                <fullName>Mixed Private/NHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>