force-app/main/default/objects/Opportunity/fields/LA_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>LA_Purchase_Order_Number__c</fullName>
    <description>Local authority purchase order number</description>
    <label>LA Purchase Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>