force-app/main/default/objects/Opportunity/fields/Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority__c</fullName>
    <description>Name of local authority if LA funded</description>
    <label>Local Authority Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>