force-app/main/default/objects/Opportunity/fields/Move_In_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Checklist_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the move in checklist been completed</description>
    <label>Move In Checklist Complete</label>
    <type>Checkbox</type>
</CustomField>