force-app/main/default/objects/Opportunity/fields/Preferred_Room__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred room if specified</description>
    <label>Preferred Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>