force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary family member or contact person</description>
    <label>Primary Family Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Contact)</relationshipLabel>
    <relationshipName>Opportunities_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>