force-app/main/default/objects/Opportunity/fields/Requested_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discharge_Date__c</fullName>
    <label>Requested Discharge Date</label>
    <type>DateTime</type>
</CustomField>