force-app/main/default/objects/Opportunity/fields/Requested_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Intake_Date__c</fullName>
    <label>Requested Intake Date</label>
    <type>DateTime</type>
</CustomField>