force-app/main/default/objects/Opportunity/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prospective or current resident</description>
    <label>Resident</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Resident)</relationshipLabel>
    <relationshipName>Opportunities_Resident</relationshipName>
    <type>Lookup</type>
</CustomField>