force-app/main/default/objects/Opportunity/fields/Respite_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Respite_End_Date__c</fullName>
    <label>Respite End Date</label>
    <type>Date</type>
</CustomField>