force-app/main/default/objects/Opportunity/fields/Respite_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Respite_Start_Date__c</fullName>
    <label>Respite Start Date</label>
    <type>Date</type>
</CustomField>