force-app/main/default/objects/Opportunity/fields/Room_Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Room_Allocation_Date__c</fullName>
    <inlineHelpText>Date when room was allocated</inlineHelpText>
    <label>Room Allocation Date</label>
    <type>Date</type>
</CustomField>