force-app/main/default/objects/Opportunity/fields/Room_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Room_Ready_Date__c</fullName>
    <inlineHelpText>Date when room will be ready for move-in</inlineHelpText>
    <label>Room Ready Date</label>
    <type>Date</type>
</CustomField>