force-app/main/default/objects/Opportunity/fields/Terms_of_Residence_Signed__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Residence_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have terms of residence been signed</description>
    <label>Terms of Residence Signed</label>
    <type>Checkbox</type>
</CustomField>