force-app/main/default/objects/Opportunity/fields/Visit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Completed_Date__c</fullName>
    <inlineHelpText>Date and time when visit was completed</inlineHelpText>
    <label>Visit Completed Date</label>
    <type>DateTime</type>
</CustomField>