force-app/main/default/objects/Opportunity/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <inlineHelpText>Outcome of the care home visit</inlineHelpText>
    <label>Visit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Event</fullName>
            </value>
            <value>
                <fullName>Very Positive</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>