force-app/main/default/objects/Opportunity/fields/Visit_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Scheduled_Date__c</fullName>
    <inlineHelpText>Date and time of scheduled visit</inlineHelpText>
    <label>Visit Scheduled Date</label>
    <type>DateTime</type>
</CustomField>