force-app/main/default/objects/Opportunity/recordTypes/Care_Home_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Care_Home_Enquiry</fullName>
    <active>true</active>
    <businessProcess>Care Homes</businessProcess>
    <label>Care Home Enquiry</label>
</RecordType>